--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,28 @@
         
         "burgov/key-value-form-bundle": "@stable",
         
-        "splash/php-bundle":            "dev-master"
+        "splash/php-bundle":            "dev-master",
+        "splash/widgets-bundle":        "dev-master"
     },
     
     "require-dev": {
+        "phpunit/phpunit":                              ">7",
+        "composer/composer":                            "^1.5",
+        "j13k/yaml-lint":                               "^1.1",
+        "jakub-onderka/php-parallel-lint":              "^1.0",
+        "phpmd/phpmd":                                  "^2.6",
+        "phpro/grumphp":                                "^0.14.0",
+        "friendsofphp/php-cs-fixer":                    ">=2.10",  
+        "sclable/xml-lint":                             "^0.2.4",
+        "sebastian/phpcpd":                             ">3.0",
+        "seld/jsonlint":                                "^1.7",
+        "sensiolabs/security-checker":                  "^4.1",
+        "squizlabs/php_codesniffer":                    "^3.2",
+        "escapestudios/symfony2-coding-standard":       ">=3.4",        
+        "phpstan/phpstan-symfony":                      "^0.10",
+        "phpstan/phpstan-doctrine":                     "^0.10",
+        "phpstan/phpstan-phpunit":                      "^0.10",
+        "phpstan/phpstan-shim":                         "^0.10"        
     },
     
     "autoload": {
