Implement Standalone tags & Widgets

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -20,3 +20,12 @@ services:
         class: Splash\Admin\EventSubscriber\EventsSubscriber
         arguments: [ '@splash.connectors.manager', "@doctrine.orm.entity_manager" ]
         tags:       ["kernel.event_subscriber"]
+
+    ########################################################################
+    # Splash Admin Widgets Factroy Service
+    splash.admin.widget.factory:
+        class: Splash\Admin\Services\WidgetFactoryService
+        public: true
+        arguments: 
+            -   "@Splash.Widgets.Factory"
+            -   "@splash.connectors.manager"
