--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,9 @@ php:
 
 #################################################################################
 ## Prepare Test Environement
-#before_install:
+before_install:
+    # Disable Memory limit   
+    - phpenv config-add "memory_limit = -1"
 #    # Setup Travis PHP     
 #    - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
 #    # Setup Composer Stability if Required   
