--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ php:
 ## Prepare Test Environement
 before_install:
     # Disable Memory limit   
-    - phpenv config-add "memory_limit = -1"
+    - phpenv config-add src/Resources/travis/x_memory.ini
 #    # Setup Travis PHP     
 #    - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
 #    # Setup Composer Stability if Required   
