--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -7,6 +7,8 @@ services:
         class: Splash\Admin\Model\ObjectsManager
         arguments: [ '@splash.connectors.manager', "@doctrine.orm.entity_manager" ]
         public: true
+        tags:
+            - { name: kernel.event_listener, event: splash.connectors.rename,   method: onObjectIdChangedEvent,  priority: 0 }   
 
     ########################################################################
     # Render Fields View 
