--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     },
     
     "require-dev": {
+        "psr/simple-cache":                             "^1.0",
         "phpunit/phpunit":                              ">7",
         "composer/composer":                            "^1.5",
         "j13k/yaml-lint":                               "^1.1",
