--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php":                          "^7.1",
         
-        "symfony/cache":                "*",
+        "symfony/cache":                "^4.0",
         
         "doctrine/doctrine-bundle":     "^1.6",
         "doctrine/orm":                 "^2.5",
@@ -41,7 +41,7 @@
         "j13k/yaml-lint":                               "^1.1",
         "jakub-onderka/php-parallel-lint":              "^1.0",
         "phpmd/phpmd":                                  "^2.6",
-        "phpro/grumphp":                                "^0.14.0",
+        "phpro/grumphp":                                "^0.16",
         "friendsofphp/php-cs-fixer":                    ">=2.10",  
         "sclable/xml-lint":                             "^0.2.4",
         "sebastian/phpcpd":                             ">3.0",
@@ -49,10 +49,11 @@
         "sensiolabs/security-checker":                  "^4.1",
         "squizlabs/php_codesniffer":                    "^3.2",
         "escapestudios/symfony2-coding-standard":       ">=3.4",        
-        "phpstan/phpstan-symfony":                      "^0.10",
-        "phpstan/phpstan-doctrine":                     "^0.10",
-        "phpstan/phpstan-phpunit":                      "^0.10",
-        "phpstan/phpstan-shim":                         "^0.10"        
+        
+        "phpstan/phpstan":                              "^0.12",        
+        "phpstan/phpstan-symfony":                      "^0.12",
+        "phpstan/phpstan-doctrine":                     "^0.12",
+        "phpstan/phpstan-phpunit":                      "^0.12"
     },
     
     "autoload": {
