--- a/grumphp.yml
+++ b/grumphp.yml
@@ -15,18 +15,14 @@
 #
 ################################################################################
 
-#############################################        
-#   Local Config 
+#############################################
+# Override Config. for Php Core Module
 parameters:
-    
-    # For Building Splash Module
-    mod-enable:     false
-    # For Building Splash Documentation
-    doc-enable:     false
-    # For Building Splash Manifest
-    yml-enable:     false
+    mode:                   "splashsync"
+    # Php Stan
+    stan-config:            "%core_dir%/phpstan/sfp.%mode%.neon"
 
-#############################################        
-# Import Config. from Generic Bundle
+#############################################
+# Import Generic + Splash Console Configs
 imports:
-    - { resource: "./vendor/splash/php-bundle/src/Resources/grumphp/grumphp.base.yml" }
+    - { resource: "./vendor/badpixxel/php-sdk/grumphp/generic.yml" }
