--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,16 @@
         "php":                          "^7.2",
         
         "symfony/cache":                "^4.0",
-        
+        "psr/simple-cache":             "^1.0",
+
         "doctrine/doctrine-bundle":     "^1.6",
         "doctrine/orm":                 "^2.5",
 
         "sonata-project/admin-bundle":  ">=3.0 ",
         "sonata-project/doctrine-orm-admin-bundle": ">=3.0",
+
+        "twig/twig":                    "^2.0",
+        "twig/extensions":              "^1.5",
         
         "burgov/key-value-form-bundle": "@stable",
         
@@ -37,7 +41,6 @@
     },
     
     "require-dev": {
-        "psr/simple-cache":             "^1.0",
         "badpixxel/php-sdk":            "dev-main"
     },
     
