FIX: Parameter #1 $content of class Symfony\Component\HttpFoundation\Response constructor expects string|null, string|false given.

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,8 @@
         "sonata-project/doctrine-orm-admin-bundle": ">=3.0",
 
         "twig/twig":                    "^2.0",
+        "twig/extra-bundle":            "~v2.12",
+        "twig/intl-extra":              "~v2.12",
 
         "burgov/key-value-form-bundle": "@stable",
         
