--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,8 @@
         "sonata-project/doctrine-orm-admin-bundle": ">=3.0",
 
         "twig/twig":                    "^2.0",
-        "twig/extra-bundle":            "~v2.12",
-        "twig/intl-extra":              "~v2.12",
+        "twig/extra-bundle":            "^2.0",
+        "twig/intl-extra":              "^2.0",
 
         "burgov/key-value-form-bundle": "@stable",
         
