--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
     ],
 
     "require": {
-        "php":                          "^7.2",
+        "php":                          "^7.2|^8.0",
         
         "symfony/cache":                "^4.0",
         "psr/simple-cache":             "^1.0",
 
-        "doctrine/doctrine-bundle":     "^1.12",
+        "doctrine/doctrine-bundle":     "^2.6",
         "doctrine/orm":                 "^2.7",
 
         "sonata-project/admin-bundle":  "^3.100",
