--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
 
     "require": {
-        "php":                          "^7.2|^8.0",
+        "php":                          "^8.0",
         
         "symfony/cache":                "^4.0",
         "psr/simple-cache":             "^1.0",
