--- a/composer.json
+++ b/composer.json
@@ -49,5 +49,10 @@
         "psr-4": {
             "Splash\\Admin\\": "src/"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "phpro/grumphp": true
+        }
     }
 }
