--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,47 +14,75 @@
 #
 #  @author Bernard Paquier <contact@splashsync.com>
 #
+# You can to add host to /etc/hosts
+#
+# 172.169.1.10    	    sonata-admin.splashsync.local
+#
 ################################################################################
 
 ################################################################################
 # Docker Compose File
 ################################################################################
 
+name: Splash-Sonata-Admin
+
 services:
+
+    ################################################################################
+    # Application Container
+    app:
+        image:              registry.gitlab.com/badpixxel-projects/php-sdk:php-8.1
+        container_name:     sonata-admin.splashsync.local
+        environment:
+            - COMPOSER_MEMORY_LIMIT=-1
+            - COMPOSER_ROOT_VERSION=dev-master
+        volumes:
+            - ./:/var/www/html
+            - ./docker/sites-available/000-default.conf:/etc/apache2/sites-available/000-default.conf
+        networks:
+            default:        { ipv4_address: 172.169.1.10, aliases: [ sonata-admin.splashsync.local ] }
+
+    ################################################################################
+    # PHP 8.2
+    php-8.2:
+        image:              registry.gitlab.com/badpixxel-projects/php-sdk:php-8.2
+        environment:
+            - COMPOSER_MEMORY_LIMIT=-1
+            - COMPOSER_ROOT_VERSION=dev-master
+        volumes:
+            - ./:/var/www/html
+            - vendor-php82:/var/www/html/vendor
 
     ################################################################################
     # PHP 8.1
     php-8.1:
-        image:          registry.gitlab.com/badpixxel-projects/php-sdk:php-8.1
-        container_name: splash-sonata-admin-8.1
+        image:              registry.gitlab.com/badpixxel-projects/php-sdk:php-8.1
         environment:
             - COMPOSER_MEMORY_LIMIT=-1
+            - COMPOSER_ROOT_VERSION=dev-master
         volumes:
             - ./:/var/www/html
             - vendor-php81:/var/www/html/vendor
 
     ################################################################################
-    # PHP 8.0
-    php-8.0:
-        image:          registry.gitlab.com/badpixxel-projects/php-sdk:php-8.0
-        container_name: splash-sonata-admin-8.0
-        environment:
-            - COMPOSER_MEMORY_LIMIT=-1
-        volumes:
-            - ./:/var/www/html
-            - vendor-php80:/var/www/html/vendor
-
-    ################################################################################
     # Node JS Container
     node:
-        image:              'node:18-alpine'
+        image:              'node:18'
         user:               'node'
-        container_name:     splash-sonata-admin-node
         tty:                true
         volumes:
             - './:/srv'
         working_dir: '/srv'
 
 volumes:
+    vendor-php82: ~
     vendor-php81: ~
-    vendor-php80: ~
+
+networks:
+    ################################################################################
+    # Default Private Network
+    default:
+        driver: bridge
+        ipam:
+            config:
+                - subnet: 172.169.1.0/24
