--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,10 @@
     ],
 
     "require": {
-        "php":                                          "^8.0",
+        "php":                                          "^8.1",
         
         "symfony/cache":                                "^5.4",
         "symfony/twig-bundle":                          "^5.4",
-        "psr/simple-cache":                             "^1.0",
 
         "doctrine/doctrine-bundle":                     "^2.6",
         "doctrine/orm":                                 "^2.7",
@@ -31,25 +30,21 @@
         "sonata-project/admin-bundle":                  "^4.0",
         "sonata-project/doctrine-orm-admin-bundle":     "^4.0",
 
-        "twig/twig":                                    "^2.0",
-        "twig/extra-bundle":                            "^2.0",
-        "twig/intl-extra":                              "^2.0",
+        "twig/twig":                                    "^3.0",
+        "twig/extra-bundle":                            "^3.0",
+        "twig/intl-extra":                              "^3.0",
 
         "burgov/key-value-form-bundle":                 "@stable",
         
         "splash/php-bundle":                            "dev-master",
         "splash/console":                               "dev-master",
 
-        "badpixxel/widgets-bundle":                     "dev-master"
+        "badpixxel/widgets-bundle":                     "3.0.x-dev"
     },
     
     "require-dev": {
-        "splash/toolkit":                               "dev-master",
-        "symfony/http-kernel":                          "^5.4",
-        "symfony/runtime":                              "^5.4",
-        "symfony/webpack-encore-bundle":                "^1.16",
-
-        "badpixxel/php-sdk":                            "^2.0"
+        "badpixxel/php-sdk":                            "^2.0",
+        "splash/toolkit":                               "dev-master"
     },
     
     "autoload": {
