--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     app:
         image:              registry.gitlab.com/badpixxel-projects/php-sdk:php-8.1
         container_name:     sonata-admin.splashsync.local
+        command:            sh /var/www/html/docker/docker-entrypoint.sh
         environment:
             - COMPOSER_MEMORY_LIMIT=-1
             - COMPOSER_ROOT_VERSION=dev-master
@@ -63,16 +64,6 @@ services:
         volumes:
             - ./:/var/www/html
             - vendor-php81:/var/www/html/vendor
-
-    ################################################################################
-    # Node JS Container
-    node:
-        image:              'node:18'
-        user:               'node'
-        tty:                true
-        volumes:
-            - './:/srv'
-        working_dir: '/srv'
 
 volumes:
     vendor-php82: ~
