WIP: Update of Widget Bundle WIP: Migrate to Twig Component System

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,5 +38,6 @@ quality:php-8.1:
 toolkit:
     stage:        Builds
     trigger:
-        project:  SplashSync/Toolkit
+        project:  'SplashSync/Toolkit'
+        branch:   '3.0'
         strategy: depend
